<resources>
  <string name="app_name">Daily Meals</string>
  <string name="expo_system_ui_user_interface_style" translatable="false">light</string>
  <string name="expo_runtime_version">1.2.0</string>
  <string name="expo_splash_screen_resize_mode" translatable="false">contain</string>
</resources>
